--- a/TaskOne/ClientApp/src/index.css
+++ b/TaskOne/ClientApp/src/index.css
@@ -25,3 +25,31 @@
     margin : 35px auto;
     text-align:center;
 }
+
+.parentDisable {
+    z-index: 998;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #aaa;
+    filter: alpha(opacity=50);
+    background: rgba(0,0,0,0.6);
+}
+
+#popup {
+    z-index: 999;
+    width: 800px;
+    height: 300px;
+    background-color: white;
+    filter: alpha(opacity=1);
+    color: #000;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 50px 60px;
+}
